--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -1,7 +1,7 @@
 html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 
 /* Positioning */
-#game, #buttons, #balloons, #level {
+#game, #buttons, #balloons, #level, #mask, #awards, #sprouts, #clouds, #nell {
  position: absolute;
  left: 0; right: 0;
  overflow: hidden;
@@ -9,7 +9,7 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 #level { bottom: 0; height: 400%; }
 #game { top: 0; bottom: 160px; }
 #buttons { bottom: 0; height: 160px; }
-#balloons { height: 25%; bottom: 0; }
+#balloons, #awards, #clouds, #nell { height: 25%; bottom: 0; }
 #buttons {
  background: black;
  text-align: center;
@@ -36,6 +36,45 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
  background-image: url('images/button-overlay-hover.png');
 }
 
+#mask {
+ top: 0; bottom: 0;
+ background: #000;
+}
+#video {
+ position: absolute;
+ top: 50%; left: 50%;
+ /* 1280x720 :: 800x450 */
+ width: 800px; height: 450px;
+ margin-left: -400px; margin-top: -225px;
+ background: #fff;
+ border: 5px solid black;
+}
+#mask, #video {
+ -webkit-transition: opacity 700ms ease-in-out;
+ -moz-transition: opacity 700ms ease-in-out;
+ transition: opacity 700ms ease-in-out;
+ opacity: 0;
+}
+.video #mask { opacity: 0.8; }
+.video #video { opacity: 1; }
+
+#level, #balloons, #awards {
+ -webkit-transition: -webkit-transform 1s ease-in-out;
+ -moz-transition: -moz-transform 1s ease-in-out;
+ transition: transform 1s ease-in-out;
+}
+#level.ground {       -webkit-transform: translate3d(0,0,0); }
+#level.troposphere {  -webkit-transform: translate3d(0,25%,0); }
+#level.stratosphere { -webkit-transform: translate3d(0,50%,0); }
+#level.mesosphere {   -webkit-transform: translate3d(0,75%,0); }
+#level.ground #balloons,
+#level.ground #awards {  -webkit-transform: translate3d(0,0,0); }
+#level.troposphere #balloons,
+#level.troposphere #awards { -webkit-transform: translate3d(0,-100%,0); }
+#level.stratosphere #balloons,
+#level.stratosphere #awards { -webkit-transform: translate3d(0,-200%,0); }
+#level.mesosphere #balloons,
+#level.mesosphere #awards { -webkit-transform: translate3d(0,-300%,0); }
 
 /* Graphics */
 #background,
@@ -92,53 +131,51 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
   top: 0; bottom: 0; left: 0; right: 0;
   background: url('images/star-tile.png') repeat;
 }
-.grass #foreground, .grass #sprouts {
-  position: absolute;
-  left: 0; right: 0;
+#awards .strip, #sprouts {
   text-align: center;
   white-space: nowrap;
 }
-.grass #foreground {
-  bottom: 0; height:243px;
-  background: url('images/grass-front.png') repeat-x;
+.grass #awards .strip {
+  position: absolute;
+  left: 0; right: 0;
+  height: 124px; bottom: 2px;
 }
-.grass #foreground .award, .grass #sprouts .award {
+.grass #awards .award, .grass #sprouts .award {
   display: inline-block;
   width: 90px;
   background-repeat: no-repeat;
   margin-left: 5px; margin-right: 5px;
 }
-.grass #foreground .award {
-  background-image: url('images/award.png'); /* blank fallback image */
+.grass #awards .award {
   height: 124px;
-  margin-top: 116px;
+  background-image: url('images/award.png'); /* blank fallback image */
   -webkit-transform: translate3d(0,138px,0);
 }
-.grass #foreground .award.a1 {
+.grass #awards .award.a1 {
   background-image: url('images/award1.png');
 }
-.grass #foreground .award.a2 {
+.grass #awards .award.a2 {
   background-image: url('images/award2.png');
 }
-.grass #foreground .award.a3 {
+.grass #awards .award.a3 {
   background-image: url('images/award3.png');
 }
-.grass #foreground .award.a4 {
+.grass #awards .award.a4 {
   background-image: url('images/award4.png');
 }
-.grass #foreground .award.a5 {
+.grass #awards .award.a5 {
   background-image: url('images/award5.png');
 }
-.grass #foreground .award.a6 {
+.grass #awards .award.a6 {
   background-image: url('images/award6.png');
 }
-.grass #foreground .award.a7 {
+.grass #awards .award.a7 {
   background-image: url('images/award7.png');
 }
-.grass #foreground .award.a8 {
+.grass #awards .award.a8 {
   background-image: url('images/award8.png');
 }
-.grass #foreground .award.show {
+.grass #awards .award.show {
   -webkit-transform: translate3d(0,0,0) !important;
   -webkit-transition-property: -webkit-transform;
   -webkit-transition-duration: 1.5s;
@@ -149,7 +186,7 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
   -moz-transition-duration: 1.5s;
   -moz-transition-timing-function: ease-in-out;
 }
-.grass #foreground .award.flex {
+.grass #awards .award.flex {
   position: absolute;
   top: 0; left: 0;
   display: none;
@@ -180,14 +217,8 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
   height: 885px;
   bottom: 104px;
 }
-.grass #hero {
-  position: absolute;
-  bottom: 0; height: 388px;
-  left: 227px; width: 151px;
-  background: url('images/grass-hero.png') no-repeat;
-}
 /* make sure #nell>div gets pointer events */
-#clouds, #clouds > *, #foreground, #sprouts, #hero, #balloons {
+#clouds, #clouds > *, #sprouts, #balloons, #awards, #mask, #video {
   pointer-events: none;
 }
 /* don't highlight nell when she is tapped */
@@ -196,9 +227,7 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
  tap-highlight-color: rgba(0,0,0,0);
 }
 #nell {
-  position: absolute;
-  left: 0; right: 0;
-  bottom: 0; height: 25%;
+  overflow: visible;
 }
 #nell > div {
   position: absolute; right: 0;
@@ -323,9 +352,10 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 #nell.n10 .head { background-position: -3210px 0px; }
 
 .grass #clouds {
-  position: absolute;
-  left: 0; right: 0;
-  bottom: 152px; height: 25%;
+  /* bias cloud level up so it's easy to center clouds on altitude boundaries */
+  bottom: 152px;
+  /* this makes the grass peek out the bottom, so allow that */
+  overflow: visible;
 }
 .grass #clouds > div {
   position: absolute;
@@ -342,6 +372,16 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 .grass #clouds > .mesosphere {
   top: -200%;
   -webkit-animation-delay: -1s;
+}
+.grass #clouds > .bug {
+  position: absolute;
+  bottom: -152px; height: 388px;
+  left: 227px; width: 151px;
+  background: url('images/grass-hero.png') no-repeat;
+}
+.grass #clouds > .grass {
+  height: 243px; bottom: -152px;
+  background: url('images/grass-front.png') repeat-x;
 }
 .grass #clouds > .stars {
   top: -300%;
@@ -598,35 +638,6 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
     -webkit-animation: astronaut-bob 20s infinite both ease-in-out;
     -moz-animation: astronaut-bob 20s infinite both ease-in-out;
 }
-/* ----------- bug animation ----------- */
-@-webkit-keyframes hero-shake {
-    0% {
-      -webkit-transform: rotate(1deg) translate3d(0,0,0);
-    }
-    50% {
-      -webkit-transform: rotate(-1deg) translate3d(0,0,0);
-    }
-    100% {
-      -webkit-transform: rotate(1deg) translate3d(0,0,0);
-    }
-}
-@-moz-keyframes hero-shake {
-    0% {
-      -moz-transform: rotate(1deg);
-    }
-    50% {
-      -moz-transform: rotate(-1deg);
-    }
-    100% {
-      -moz-transform: rotate(1deg);
-    }
-}
-.anim .grass #hero {
-    -webkit-animation: hero-shake 5000ms infinite both ease-in-out;
-    -moz-animation: hero-shake 5000ms infinite both ease-in-out;
-    -webkit-transform-origin: center right;
-    -moz-transform-origin: center right;
-}
 
 /* ----------- cloud divider animation ----------- */
 @-webkit-keyframes clouds-drift {
@@ -661,9 +672,40 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
   -moz-animation-delay: -120s;
   -moz-animation-duration: 140s;
 }
-.grass #clouds > .stars {
+.grass #clouds > .stars,
+.grass #clouds > .grass {
   -webkit-animation: none;
   -moz-animation: none;
+}
+
+/* ----------- bug animation ----------- */
+@-webkit-keyframes bug-shake {
+    0% {
+      -webkit-transform: rotate(1deg) translate3d(0,0,0);
+    }
+    50% {
+      -webkit-transform: rotate(-1deg) translate3d(0,0,0);
+    }
+    100% {
+      -webkit-transform: rotate(1deg) translate3d(0,0,0);
+    }
+}
+@-moz-keyframes bug-shake {
+    0% {
+      -moz-transform: rotate(1deg);
+    }
+    50% {
+      -moz-transform: rotate(-1deg);
+    }
+    100% {
+      -moz-transform: rotate(1deg);
+    }
+}
+.anim .grass #clouds > .bug {
+    -webkit-animation: bug-shake 5000ms infinite both ease-in-out;
+    -moz-animation: bug-shake 5000ms infinite both ease-in-out;
+    -webkit-transform-origin: center right;
+    -moz-transform-origin: center right;
 }
 
 /* ----------- cloud and satellite background animation ----------- */
