--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -2,6 +2,7 @@ html,body {
  width:100%; height:100%; margin:0; padding: 0; border:none;
  overflow: hidden;
 }
+body { background: #008; }
 
 /* Positioning */
 #game, #buttons, #balloons, #level, #mask, #awards, #sprouts, #clouds, #nell,
@@ -53,28 +54,39 @@ html,body {
  background: #fff;
  border: 5px solid black;
 }
-#mask, #video {
- -webkit-transition: opacity 700ms ease-in-out;
- -moz-transition: opacity 700ms ease-in-out;
- transition: opacity 700ms ease-in-out;
+#mask, #video, #menu {
+ /* transition effect knowledge gleaned from:
+  *   http://www.greywyvern.com/?post=337
+  * thanks! */
+ -webkit-transition: visibility 0s linear 700ms, opacity 700ms ease-in-out;
+ -moz-transition: visibility 0s linear 700ms, opacity 700ms ease-in-out;
+ transition: visibility 0s linear 700ms, opacity 700ms ease-in-out;
  opacity: 0;
+ visibility: hidden;
 }
 .video #mask { opacity: 0.8; }
-.video #video { opacity: 1; }
+.video #video,
+.menu #menu { opacity: 1; }
+.video #mask,
+.video #video,
+.menu #menu {
+  visibility: visible;
+  /* change the visibility property immediately */
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  transition-delay: 0s;
+}
 .video #game *,
 .paused #game * {
  -webkit-animation-play-state: paused;
  -moz-animation-play-state: paused;
 }
 
-.video #video,
 .game #game,
-.game #buttons,
-.menu #menu { display: block; opacity: 1; }
+.game #buttons { display: block; opacity: 1; }
 
 #menu {
   top: 0; bottom: 0;
-  display: none; /* by default */
 }
 
 #level, #balloons, #awards {
