--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@ html,body {
  width:100%; height:100%; margin:0; padding: 0; border:none;
  overflow: hidden;
 }
+body { background: #008; }
 
 /* Positioning */
 #game, #buttons, #balloons, #level, #mask, #awards, #sprouts, #clouds, #nell,
-#menu {
+#menu, #rotate {
  position: absolute;
  left: 0; right: 0;
  overflow: hidden;
@@ -53,28 +54,43 @@ html,body {
  background: #fff;
  border: 5px solid black;
 }
-#mask, #video {
- -webkit-transition: opacity 700ms ease-in-out;
- -moz-transition: opacity 700ms ease-in-out;
- transition: opacity 700ms ease-in-out;
+#mask, #video, #menu, #rotate {
+ /* transition effect knowledge gleaned from:
+  *   http://www.greywyvern.com/?post=337
+  * thanks! */
+ -webkit-transition: visibility 0s linear 700ms, opacity 700ms ease-in-out;
+ -moz-transition: visibility 0s linear 700ms, opacity 700ms ease-in-out;
+ transition: visibility 0s linear 700ms, opacity 700ms ease-in-out;
  opacity: 0;
+ visibility: hidden;
 }
-.video #mask { opacity: 0.8; }
-.video #video { opacity: 1; }
+.video #mask,
+.rotate #mask { opacity: 0.8; }
+.video #video,
+.menu #menu,
+.rotate #rotate { opacity: 1; }
+.video #mask,
+.video #video,
+.rotate #mask,
+.rotate #rotate,
+.menu #menu {
+  visibility: visible;
+  /* change the visibility property immediately */
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  transition-delay: 0s;
+}
 .video #game *,
 .paused #game * {
  -webkit-animation-play-state: paused;
  -moz-animation-play-state: paused;
 }
 
-.video #video,
 .game #game,
-.game #buttons,
-.menu #menu { display: block; opacity: 1; }
+.game #buttons { display: block; opacity: 1; }
 
 #menu {
   top: 0; bottom: 0;
-  display: none; /* by default */
 }
 
 #level, #balloons, #awards {
@@ -487,7 +503,7 @@ html,body {
 }
 
 .grass.stratosphere #balloons .balloon {
-  background-image: url('images/balloon-white.png') !important;
+  background-image: url('images/balloon-white.png');
 }
 .grass.stratosphere #balloons .black .payload {
   background-image: url('images/tag-white-bat.png');
@@ -503,7 +519,7 @@ html,body {
 }
 
 .grass.mesosphere #balloons .balloon {
-  background-image: url('images/balloon-white.png') !important;
+  background-image: url('images/balloon-white.png');
 }
 .grass.mesosphere #balloons .black .payload {
   background-image: url('images/tag-white-bat-bw.png');
@@ -842,6 +858,10 @@ html,body {
       -moz-transform: rotate(1deg);
     }
 }
+.grass #clouds > .bug {
+    -webkit-animation: none;
+    -moz-animation: none;
+}
 .anim .grass #clouds > .bug {
     -webkit-animation: bug-shake 5000ms infinite both ease-in-out;
     -moz-animation: bug-shake 5000ms infinite both ease-in-out;
@@ -978,6 +998,31 @@ html,body {
 #menu > .stars .star.hover {
   background-image: url('images/star-bright.png');
 }
+/* rotate & pulse the stars to make it clear they are touchable */
+@-webkit-keyframes menu-star-throb {
+  0% {
+    -webkit-transform: scale(1) translate3d(0,0,0);
+  }
+  100% {
+    -webkit-transform: scale(0.8) translate3d(0,0,0);
+  }
+}
+@-moz-keyframes menu-star-throb {
+  0% {
+    -moz-transform: scale(1);
+  }
+  100% {
+    -moz-transform: scale(0.8);
+  }
+}
+.menu #menu > .stars .star {
+  -webkit-animation: menu-star-throb 1s infinite alternate ease-in;
+  -moz-animation: menu-star-throb 1s infinite alternate ease-in;
+}
+#menu > .stars .star.hover {
+  -webkit-animation-play-state: paused;
+  -moz-animation-play-state: paused;
+}
 #menu > .clouds,
 #menu > .sprout,
 #menu > .stars,
@@ -989,3 +1034,40 @@ html,body {
 }
 #menu > .stars > div > * { pointer-events: all; }
 .nells > div > div { pointer-events: all; }
+
+/* ------- "please rotate" animation -------- */
+#rotate,
+#rotate .background,
+#rotate .foreground {
+  position: absolute;
+  left: 0; right: 0;
+  top: 0; bottom: 0;
+  background-repeat: no-repeat;
+  background-position: center right;
+}
+#rotate .background {
+  background-image: url('images/xoom-rotate-bg.png');
+}
+#rotate .foreground {
+  background-image: url('images/xoom-rotate-fg.png');
+}
+@-webkit-keyframes rotate-throb {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes menu-star-throb {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.rotate #rotate .background {
+  -webkit-animation: rotate-throb 1s infinite alternate ease;
+  -moz-animation: rotate-throb 1s infinite alternate ease;
+}
